# space

./: CMakeLists.txt
api/cxximpl/: CMakeLists.txt
api/cxximpl/include/: sendy.hpp
api/cxximpl/include/sendy/: encode.hpp
api/cxximpl/src/: encode.cpp
api/cxximpl/src/tests/: be.cpp  encoding.cpp  foreign.cpp
lib/sendy/: CMakeLists.txt
lib/sendy/include/: sendy.hpp
lib/sendy/include/sendy/: encode.hpp
lib/sendy/src/tests/: encoding.cpp
server/: CMakeLists.txt
server/include/: pos.hpp
server/src/: main.cpp
